xine-lib (1-rc3)
  * fix dvd menu blending when using tvtime plugin (yuy2 blend)
  * fix problems with some more elaborate post plugin setups
  * discontinuity problems in audio only streams fixed
  * fix a bug in the id3v2.2 parsing code
  * fix best streams choice in mmsh
  * updated internal copy of ffmpeg with a lot of warning fixes
  * help texts for video post plugins
  * fix pts handling bug that caused long freezing in some animated dvd menus
  * configfile beautification (values set to default are now commented out)
  * fix some more problems with jumpy non-MPEG NTSC streams on the DXR3
  * handle comments in rpm playlist files
  * realaudio demuxer improvements including support for 14.4 codec and reading
    meta info
  * post plugin for ffmpeg libpostprocess (pp)
  * updated win32 MSVC port
  * default to menu button 1, if an invalid button is set
    (fixes main menu of "Alice in Wonderland" RC2)
  * fix yuy2 output on mga_vid vidix driver
  * fix syncing code of audio visualization post plugins
    (goom video does not jump any more)
  * problem with long frame durations fixed
  * seek timeout in RIP input plugin
  * support for saved files bigger than 2 GB
  * new unscaled overlay feature (using XShape extension)
    text subtitles may now be rendered at full screen resolution
  * load xine fonts on demand - faster startup
  * decoder priority can be changed without restarting
  * fix length of mpeg 2 audio vbr streams
  * use AUDIODEV enviroment variable on Sun
  * text subtitles improvements and bugfixes
  * unified handling of external subtitles and ogg subtitles
  * detect end of real rtsp streams
  * fix tvtime segfaults
  * fix performance problems of RTP/UDP plugin
  * fix crash with really long subtitle/language names in ogm/off files
  * lots of internal cleanup
  * fix crash when using the save plugin with mmst
  * id3v2.3 parser
  * fix playback of 8 bit sound when the soundcard doesn't support them

 
xine-lib (1-rc2)