@@ -1,3 +1,7 @@
+xine-lib (1-rc4)
+  * new subtitle formats: jacobsub, subviewer 2.0, subrip 0.9
+  * auto hidding of the subtitles
+
 xine-lib (1-rc3)
   * fix dvd menu blending when using tvtime plugin (yuy2 blend)
   * fix problems with some more elaborate post plugin setups
